--- a/vulkanRenderer/makefile
+++ b/vulkanRenderer/makefile
@@ -3,7 +3,7 @@ INC_DIR = Include
 SRC_DIR = Source
 CFLAGS = -std=c17 -O2 -I./$(INC_DIR)
 LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lm
-OBJS = main.o window.o renderer.o vulkan_device.o vulkan_instance.o vulkan_debug.o vulkan_utils.o dynamic_vector.o
+OBJS = main.o window.o renderer.o vulkan_device.o vulkan_swap_chain.o vulkan_instance.o vulkan_debug.o vulkan_utils.o dynamic_vector.o tree.o
 
 renderer: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o renderer $(LDFLAGS)
@@ -17,6 +17,9 @@ window.o: $(SRC_DIR)/window.c $(INC_DIR)/window.h
 renderer.o: $(SRC_DIR)/renderer.c $(INC_DIR)/renderer.h
 	$(CC) $(CFLAGS) -c -o $@ $< $(LDFLAGS)
 
+vulkan_swap_chain.o: $(SRC_DIR)/vulkan_swap_chain.c $(INC_DIR)/vulkan_swap_chain.h
+	$(CC) $(CFLAGS) -c -o $@ $< $(LDFLAGS)
+
 vulkan_device.o: $(SRC_DIR)/vulkan_device.c $(INC_DIR)/vulkan_device.h
 	$(CC) $(CFLAGS) -c -o $@ $< $(LDFLAGS)
 
@@ -26,7 +29,10 @@ vulkan_instance.o: $(SRC_DIR)/vulkan_instance.c $(INC_DIR)/vulkan_instance.h
 vulkan_debug.o: $(SRC_DIR)/vulkan_debug.c $(INC_DIR)/vulkan_debug.h
 	$(CC) $(CFLAGS) -c -o $@ $< $(LDFLAGS)
 
-vulkan_utils.o: $(SRC_DIR)/vulkan_utils.c $(INC_DIR)/vulkan_utils.h
+vulkan_utils.o: $(SRC_DIR)/vulkan_utils.c $(INC_DIR)/vulkan_utils.h $(INC_DIR)/tree.h
+	$(CC) $(CFLAGS) -c -o $@ $< $(LDFLAGS)
+
+tree.o: $(SRC_DIR)/tree.c $(INC_DIR)/tree.h
 	$(CC) $(CFLAGS) -c -o $@ $< $(LDFLAGS)
 
 dynamic_vector.o: $(SRC_DIR)/dynamic_vector.c $(INC_DIR)/dynamic_vector.h
