--- a/vulkanRenderer/.vscode/settings.json
+++ b/vulkanRenderer/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "vulkan_utils.h": "c"
+        "vulkan_utils.h": "c",
+        "cstdlib": "c",
+        "vector": "c"
     }
 }
