--- a/vulkanRenderer/makefile
+++ b/vulkanRenderer/makefile
@@ -6,7 +6,7 @@ BUILD_DIR = build
 BIN_DIR = bin
 
 CFLAGS = -std=c17 -O2 -I./$(INCLUDE_DIR)
-LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lm
+LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lm -lSDL2
 
 # Source files
 SRC_FILES = $(wildcard $(SRC_DIR)/*.c)
@@ -16,7 +16,7 @@ OBJ_FILES = $(patsubst $(SRC_DIR)/%.c,$(BUILD_DIR)/%.o,$(SRC_FILES))
 EXECUTABLE = $(BIN_DIR)/vulkan_app
 
 # Targets
-all: $(BUILD_DIR) $(BIN_DIR) $(EXECUTABLE)
+all: $(BUILD_DIR) $(BIN_DIR) $(EXECUTABLE) shaders
 
 $(BUILD_DIR):
 	mkdir -p $(BUILD_DIR)
@@ -33,7 +33,14 @@ $(BUILD_DIR)/%.o: $(SRC_DIR)/%.c
 clean:
 	rm -rf $(BUILD_DIR) $(BIN_DIR)
 
+shaders/%.spv: shaders/shader.%
+	glslc ./shaders/shader.% -o ./shaders/%.spv
+
+shaders: ./shaders/shader.vert ./shaders/shader.frag
+	glslc ./shaders/shader.vert -o ./shaders/vert.spv
+	glslc ./shaders/shader.frag -o ./shaders/frag.spv
+
 test: all
 	./$(EXECUTABLE)
 
-.PHONY: all clean test
+.PHONY: all clean shaders test
