cleanup of images

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ vulkanRenderer/renderer
 vulkanRenderer/Build/renderer
 vulkanRenderer/build/renderer
 .vscode/c_cpp_properties.json
+vulkanRenderer/bin/vulkan_app
